[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-self-evolving-agent"
version = "0.1.0"
description = "Hermes-style self-evolving autonomous agent MVP."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hermes Agent Team" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
hermes-agent = "hermes_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
